Cria Dockerfile e ajustes menores